# al-mizan-hackathon

backend/: Dockerfile  pyproject.toml
backend/py_app_service/: .gitignore  app.py  config.py
backend/py_app_service/models/: __init__.py  project.py
backend/py_app_service/routers/: indexer.py  projects.py  selected_projects.py  training.py  users.py
backend/py_app_service/scripts/: seed_projects.py
backend/py_app_service/services/: compvis.py  training.py
blockchain_indexer/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  ponder.config.ts  ponder.schema.ts
blockchain_indexer/abis/: mockStableCoin.ts  wakaf.ts
blockchain_indexer/src/: index.ts
frontend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  wagmi.ts
frontend/src/components/layout/: Navbar.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: LandingPage.tsx  NazirDashboard.tsx  ProjectsPage.tsx  WakifDashboard.tsx
frontend/src/types/: dashboard.ts
frontend/src/utils/: api.ts  rupiahFormatter.ts
smart_contract/: hardhat.config.ts  package-lock.json  package.json
smart_contract/contracts/: MockIDR.sol  Wakaf.sol
smart_contract/ignition/modules/: MockIDR.ts
smart_contract/scripts/: deploy.ts  token-const-args.ts  wakaf-const-args.ts
smart_contract/test/: WakafAndMockIDR.ts
(+7 files in other folders)
