[tool.poetry]
name = "py-app-service"
version = "0.1.0"
description = ""
authors = ["hafid abi d <aselole87@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
motor = "^3.5.1"
pydantic = "^2.8.2"
httpx = "^0.27.0"
python-multipart = "^0.0.20"
opencv-python = "^4.12.0.88"
apscheduler = "^3.11.1"
asyncio = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
